// ticket.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.ticket";
option java_outer_classname = "TicketProto";

package ticket;

service TicketService {
  // 예매된 좌석 ID 리스트 조회
  rpc GetBookedSeatIds (BookedSeatsRequest) returns (BookedSeatsResponse);
}

message BookedSeatsRequest {
  int64 gameId = 1;
}

message BookedSeatsResponse {
  repeated int64 seatIds = 1;
}
